--- a/chat_page.html
+++ b/chat_page.html
@@ -16,7 +16,7 @@
     <body>
         <button id="logout" onclick="logout()" class="glyphicon glyphicon-log-out btn btn-danger">Logout</button>
         <center>
-            <h1 id="greet"> Hello </h1>
+            <h1 class="color_white" id="user"></h1>
             <div id="msg_output"></div>
             <span>
                 <input id="msg" placeholder="Enter Message Here                                        Enter Message Here                                        Enter Message Here">
