--- a/index.html
+++ b/index.html
@@ -17,13 +17,13 @@
       <input type="text" class="form-control  name" id="user_name" placeholder="User Name"> <br><br>
       <input type="text" class="form-control  room" id="room_name" placeholder="Room Name"><br><br>
 
-    <button class="btn btn-primary w-100 py-2     mbtn" onclick="signin()" type="submit">Sign in</button>
+   <div id="btn"><button id="mbtn" class="btn btn-primary w-100 py-2     mbtn" onclick="signin()" type="submit">Sign in</button></div>
     <p class="mt-5 mb-3 text-body-secondary">&copy; 2017-2023</p>
 
 
 </div>
 </center>
-    <h1 id="tred"> ##Treding Rooms </h1>
-    <div id="output_rooms"></div>
+<h3 id="tred" class="color_white">#TRENDINGROOMS</h3>
+<div id="output"></div>
   </body>
 </html>
