--- a/index.html
+++ b/index.html
@@ -1,32 +1,29 @@
-<!doctype html>
-<html lang="en" data-bs-theme="auto">
-  <head>
-    <script src="https://www.gstatic.com/firebasejs/7.6.2/firebase-app.js"></script>
-<script src="https://www.gstatic.com/firebasejs/7.6.2/firebase-firestore.js"></script>
-<script src="https://www.gstatic.com/firebasejs/live/3.1/firebase.js"></script>
-    <script src="main.js"></script>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title> Sign in : LETSCHAT WEB APP </title>
-    <link rel="canonical" href="https://getbootstrap.com/docs/5.3/examples/sign-in/">
-    <link href="style.css" rel="stylesheet">
- </head>
-  
- <body>
-  <center>   
-    <div id="sign-in">
-    <h1 class="h1">PLEASE SIGN-IN</h1>
+<!DOCTYPE html>
+<html>
+<head>
+	<title> Lets Chat Web App </title>
+<link href="https://fonts.googleapis.com/css?family=Yeon+Sung&display=swap" rel="stylesheet"><meta name="viewport" content="width=device-width, initial-scale=1">
 
-      <input type="text" class="form-control  name" id="user_name" placeholder="User Name"> <br><br>
-      <input type="text" class="form-control  room" id="room_name" placeholder="Room Name"><br><br>
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
 
-   <div id="btn"><button id="mbtn" class="btn btn-primary w-100 py-2     mbtn" onclick="signin()" type="submit">Sign in</button></div>
-    <p class="mt-5 mb-3 text-body-secondary">&copy; 2017-2023</p>
+<link rel="stylesheet" type="text/css" href="style.css">
+<script src="letschat.js"></script>
+</head>
+<body>
+<center>
+	<h1 class="header">	
+		Lets Chat Web App
+</h1>
 
 
-</div>
+		<div class="form-group       col-lg-4 col-md-6 col-sm-6 col-xs-11 login_div">
+		  <h2> <b>User Name:</b> </h2> <br>
+		<input type="text" id="user_name" class="uuser_name      form-control" placeholder="User Name"> <br>
+		
+		<button id="login_button" class="login_button    btn btn-primary" onclick="addUser()">Log in</button>
+		<br><br> </div>
 </center>
-<h3 id="tred" class="color_white">#TRENDINGROOMS</h3>
-<div id="output"></div>
-  </body>
+</body>
 </html>
