--- a/letschat_page.html
+++ b/letschat_page.html
@@ -31,7 +31,7 @@
 	<div class="input_div_message_page"> <br>
 		<h2><b>Send:</b></h2>
 		<input placeholder="Message" class="form-control" id="msg"> <br>
-		<button onclick="send_msg()" class="btn btn-success">Send</button> <br> &nbsp;
+		<button onclick="send()" class="btn btn-success">Send</button> <br> &nbsp;
 	</div>
 </center>
 
